# snow

./: CMakeLists.txt  flake.class.cpp  header.h  lib.cpp  main.cpp
cmake/: FindSDL2.cmake  FindSDL2IMAGE.cmake
